set(SOURCES
    AST.cpp
    bytecode/ASTCodegen.cpp
    bytecode/BasicBlock.cpp
    bytecode/Generator.cpp
    bytecode/Instruction.cpp
    bytecode/Interpreter.cpp
    bytecode/Op.cpp
    bytecode/Pass/DumpCFG.cpp
    bytecode/Pass/GenerateCFG.cpp
    bytecode/Pass/MergeBlocks.cpp
    bytecode/Pass/PlaceBlocks.cpp
    bytecode/Pass/UnifySameBlocks.cpp
    bytecode/StringTable.cpp
    Console.cpp
    heap/BlockAllocator.cpp
    heap/CellAllocator.cpp
    heap/Handle.cpp
    heap/Heap.cpp
    heap/HeapBlock.cpp
    Interpreter.cpp
    Lexer.cpp
    MarkupGenerator.cpp
    Parser.cpp
    runtime/AbstractOperations.cpp
    runtime/AggregateError.cpp
    runtime/AggregateErrorConstructor.cpp
    runtime/AggregateErrorPrototype.cpp
    runtime/ArgumentsObject.cpp
    runtime/Array.cpp
    runtime/ArrayBuffer.cpp
    runtime/ArrayBufferConstructor.cpp
    runtime/ArrayBufferPrototype.cpp
    runtime/ArrayConstructor.cpp
    runtime/ArrayIterator.cpp
    runtime/ArrayIteratorPrototype.cpp
    runtime/ArrayPrototype.cpp
    runtime/AtomicsObject.cpp
    runtime/BigInt.cpp
    runtime/BigIntConstructor.cpp
    runtime/BigIntObject.cpp
    runtime/BigIntPrototype.cpp
    runtime/BooleanConstructor.cpp
    runtime/BooleanObject.cpp
    runtime/BooleanPrototype.cpp
    runtime/BoundFunction.cpp
    runtime/ConsoleObject.cpp
    runtime/DataView.cpp
    runtime/DataViewConstructor.cpp
    runtime/DataViewPrototype.cpp
    runtime/Date.cpp
    runtime/DateConstructor.cpp
    runtime/DatePrototype.cpp
    runtime/DeclarativeEnvironment.cpp
    runtime/Environment.cpp
    runtime/Error.cpp
    runtime/ErrorConstructor.cpp
    runtime/ErrorPrototype.cpp
    runtime/ErrorTypes.cpp
    runtime/Exception.cpp
    runtime/FinalizationRegistry.cpp
    runtime/FinalizationRegistryConstructor.cpp
    runtime/FinalizationRegistryPrototype.cpp
    runtime/FunctionConstructor.cpp
    runtime/FunctionEnvironment.cpp
    runtime/FunctionObject.cpp
    runtime/FunctionPrototype.cpp
    runtime/GeneratorFunctionConstructor.cpp
    runtime/GeneratorFunctionPrototype.cpp
    runtime/GeneratorObject.cpp
    runtime/GeneratorObjectPrototype.cpp
    runtime/GlobalEnvironment.cpp
    runtime/GlobalObject.cpp
    runtime/IndexedProperties.cpp
    runtime/Intl/Intl.cpp
    runtime/IteratorOperations.cpp
    runtime/IteratorPrototype.cpp
    runtime/JSONObject.cpp
    runtime/Map.cpp
    runtime/MapConstructor.cpp
    runtime/MapIterator.cpp
    runtime/MapIteratorPrototype.cpp
    runtime/MapPrototype.cpp
    runtime/MarkedValueList.cpp
    runtime/MathObject.cpp
    runtime/NativeFunction.cpp
    runtime/NumberConstructor.cpp
    runtime/NumberObject.cpp
    runtime/NumberPrototype.cpp
    runtime/Object.cpp
    runtime/ObjectConstructor.cpp
    runtime/ObjectEnvironment.cpp
    runtime/ObjectPrototype.cpp
    runtime/OrdinaryFunctionObject.cpp
    runtime/PrimitiveString.cpp
    runtime/Promise.cpp
    runtime/PromiseConstructor.cpp
    runtime/PromiseJobs.cpp
    runtime/PromisePrototype.cpp
    runtime/PromiseReaction.cpp
    runtime/PromiseResolvingFunction.cpp
    runtime/PropertyDescriptor.cpp
    runtime/ProxyConstructor.cpp
    runtime/ProxyObject.cpp
    runtime/Reference.cpp
    runtime/ReflectObject.cpp
    runtime/RegExpConstructor.cpp
    runtime/RegExpObject.cpp
    runtime/RegExpPrototype.cpp
    runtime/RegExpStringIterator.cpp
    runtime/RegExpStringIteratorPrototype.cpp
    runtime/Set.cpp
    runtime/SetConstructor.cpp
    runtime/SetIterator.cpp
    runtime/SetIteratorPrototype.cpp
    runtime/SetPrototype.cpp
    runtime/Shape.cpp
    runtime/StringConstructor.cpp
    runtime/StringIterator.cpp
    runtime/StringIteratorPrototype.cpp
    runtime/StringObject.cpp
    runtime/StringPrototype.cpp
    runtime/Symbol.cpp
    runtime/SymbolConstructor.cpp
    runtime/SymbolObject.cpp
    runtime/SymbolPrototype.cpp
    runtime/Temporal/AbstractOperations.cpp
    runtime/Temporal/Calendar.cpp
    runtime/Temporal/CalendarConstructor.cpp
    runtime/Temporal/CalendarPrototype.cpp
    runtime/Temporal/Duration.cpp
    runtime/Temporal/DurationConstructor.cpp
    runtime/Temporal/DurationPrototype.cpp
    runtime/Temporal/Instant.cpp
    runtime/Temporal/InstantConstructor.cpp
    runtime/Temporal/InstantPrototype.cpp
    runtime/Temporal/Now.cpp
    runtime/Temporal/PlainDate.cpp
    runtime/Temporal/PlainDateConstructor.cpp
    runtime/Temporal/PlainDatePrototype.cpp
    runtime/Temporal/PlainDateTime.cpp
    runtime/Temporal/PlainDateTimeConstructor.cpp
    runtime/Temporal/PlainDateTimePrototype.cpp
    runtime/Temporal/PlainTime.cpp
    runtime/Temporal/PlainTimeConstructor.cpp
    runtime/Temporal/PlainTimePrototype.cpp
    runtime/Temporal/PlainYearMonth.cpp
    runtime/Temporal/PlainYearMonthConstructor.cpp
    runtime/Temporal/PlainYearMonthPrototype.cpp
    runtime/Temporal/Temporal.cpp
    runtime/Temporal/TimeZone.cpp
    runtime/Temporal/TimeZoneConstructor.cpp
    runtime/Temporal/TimeZonePrototype.cpp
    runtime/Temporal/ZonedDateTime.cpp
    runtime/Temporal/ZonedDateTimeConstructor.cpp
    runtime/Temporal/ZonedDateTimePrototype.cpp
    runtime/TypedArray.cpp
    runtime/TypedArrayConstructor.cpp
    runtime/TypedArrayPrototype.cpp
    runtime/Utf16String.cpp
    runtime/Value.cpp
    runtime/VM.cpp
    runtime/WeakContainer.cpp
    runtime/WeakMap.cpp
    runtime/WeakMapConstructor.cpp
    runtime/WeakMapPrototype.cpp
    runtime/WeakRef.cpp
    runtime/WeakRefConstructor.cpp
    runtime/WeakRefPrototype.cpp
    runtime/WeakSet.cpp
    runtime/WeakSetConstructor.cpp
    runtime/WeakSetPrototype.cpp
    SyntaxHighlighter.cpp
    Token.cpp
)

pranaos_lib(libjs js)
target_link_libraries(libjs libm libcore libcrypto libregex libsyntax libunicode)
